--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   url_launcher: 6.0.17
   introduction_screen: ^2.1.0
   webview_flutter: ^3.0.0
+  lottie: ^1.2.1
+  crop_your_image: ^0.6.0+1
 
 dev_dependencies:
   flutter_test:
@@ -25,4 +27,5 @@ flutter:
   uses-material-design: true
 
   assets:
-  - images/
+  - assets/
+  - assets/images/
